# ea-baseline-modernized

./: .gitignore  CMakeLists.txt  README.md
.hermes/plans/: 2026-04-23_093416-modernization-progress-review-and-next-plan.md  2026-04-23_101900-commando-dependency-prep.md  2026-04-23_102700-batch-forecast-roadmap.md
Code/BinkMovie/: Bink.h  CMakeLists.txt  RAD.H  subtitlemanager.cpp  subtitleparser.cpp
Code/Combat/: CMakeLists.txt  CNCModeSettings.cpp  SoundEnvironment.cpp  WeatherMgr.cpp  WeatherMgr.h  activeconversation.cpp  backgroundmgr.cpp  beacongameobj.cpp  building.cpp  combat.cpp  conversationmgr.cpp  damage.h  elevator.cpp  ffactorylist.cpp  mendozabossgameobj.cpp  playerdata.h  powerup.cpp  raveshawbossgameobj.cpp  refinerygameobj.cpp  sakurabossgameobj.cpp  savegame.cpp  scriptablegameobj.h  scriptcommands.cpp  smartgameobj.h  soldier.cpp  staticnetworkobject.cpp  textwindow.cpp  timemgr.cpp  weaponmanager.h
Code/Commando/: AnnounceEvent.cpp  AudibleSound.h  AutoStart.cpp  AutoStart.h  CDKeyAuth.cpp  CDKeyAuth.h  CMakeLists.txt  DlgDownload.cpp  DlgDownload.h  DlgMPConnect.cpp  DlgMPConnect.h  DlgMPConnectionRefused.cpp  DlgMPConnectionRefused.h  DlgMPTeamSelect.cpp  DlgMPTeamSelect.h  DlgMessageBox.cpp  DlgMessageBox.h  DlgPasswordPrompt.cpp  DlgPasswordPrompt.h  DlgQuickmatch.cpp  DlgQuickmatch.h  DlgRestart.cpp  DlgRestart.h  DlgWOLLogon.cpp  DlgWOLSettings.cpp  DlgWOLSettings.h  DlgWOLWait.cpp  DlgWOLWait.h  DlgWebPage.cpp  DlgWebPage.h  FirewallWait.cpp  GameResSend.cpp  GameResSend.h  GameSpy_QnR.cpp  GameSpy_QnR.h  NAT.cpp  ServerSettings.cpp  ServerSettings.h  WOLBuddyMgr.cpp  WOLBuddyMgr.h  (+63 more)
Code/DirectX/Inc/: D3dx8core.h
Code/Installer/: Installer.cpp  WinMain.cpp
Code/SControl/: CMakeLists.txt  servercontrol.cpp  servercontrolsocket.cpp  servercontrolsocket.h
Code/Scripts/: CMakeLists.txt  DLLmain.cpp  DPrint.h  Mission00.cpp  Mission01.cpp  Mission02.cpp  Mission03.cpp  Mission04.cpp  Mission05.cpp  Mission06.cpp  Mission07.cpp  Mission09.cpp  Mission10.cpp  Mission11.cpp  MissionDemo.cpp  MissionX0.cpp  PRDemo.cpp  ScriptRegistrant.h  ScriptRegistrar.cpp  Test_BMG.cpp  Test_Cinematic.cpp  Test_DAK.cpp  Test_DAY.cpp  Test_DLS.cpp  Test_DME.cpp  Test_GTH.cpp  Test_PDS.cpp  Test_RAD.cpp  Test_RMV.cpp  Test_RMV_Toolkit.cpp  Toolkit.cpp  Toolkit_Objectives.cpp  Toolkit_Objects.cpp  mission08.cpp  scriptcommands.h  scriptevents.h  scripts.cpp  slist.h  unitcombat.cpp
Code/Tools/LevelEdit/: BuildingNode.cpp  CoverSpotNode.cpp  FileMgr.cpp  (+9 more)
Code/WWAudio/: AudibleSound.cpp  AudioEvents.cpp  AudioSaveLoad.cpp  CMakeLists.txt  Sound3D.cpp  SoundScene.cpp  SoundSceneObj.cpp  SoundSceneObj.h  StaticSoundCullObj.h  WWAudio.cpp  WWAudio.h
Code/WWLib/: Notify.h  Signaler.h
Code/WWMath/: CMakeLists.txt  cardinalspline.cpp  curve.cpp  hermitespline.cpp  tcbspline.cpp  vector4.h
Code/WWOnline/: GameResField.cpp  PingProfile.cpp  RefPtr.h  WOLChannel.cpp  WOLChannel.h  WOLChatMsg.cpp  WOLChatMsg.h  WOLChatObserver.cpp  WOLChatObserver.h  WOLConnect.cpp  WOLConnect.h  WOLDownload.cpp  WOLDownload.h  WOLErrorUtil.cpp  WOLGame.h  WOLGameOptions.h  WOLLadder.cpp  WOLLadder.h  WOLLangCodes.h  WOLLoginInfo.cpp  WOLLoginInfo.h  WOLNetUtilObserver.cpp  WOLNetUtilObserver.h  WOLPageMsg.cpp  WOLPageMsg.h  WOLPing.h  WOLProduct.cpp  WOLProduct.h  WOLServer.cpp  WOLServer.h  WOLSession.cpp  WOLSession.h  WOLSquad.cpp  WOLSquad.h  WOLUser.cpp  WOLUser.h  WaitCondition.cpp  WaitCondition.h  atlbase.h
Code/WWUI/: MenuDialog.h  PopupDialog.h
Code/ww3d2/: CMakeLists.txt  assetmgr.cpp  collect.cpp  decalmsh.cpp  dx8polygonrenderer.cpp  dx8polygonrenderer.h  dx8wrapper.h  dynamesh.h  formconv.cpp  formconv.h  hlod.cpp  hmorphanim.cpp  lightenvironment.cpp  mesh.h  motchan.cpp  segline.cpp
Code/wwbitpack/: BitPacker.cpp  CMakeLists.txt  bitstream.h
Code/wwdebug/: CMakeLists.txt  wwdebug.cpp  wwmemlog.cpp  wwprofile.cpp
Code/wwlib/: CMakeLists.txt  Except.cpp  FastAllocator.cpp  FastAllocator.h  LaunchWeb.cpp  MixFile.h  Notify.h  TARGA.CPP  WWCOMUtil.cpp  WWCOMUtil.h  always.h  blitblit.h  bool.h  cpudetect.cpp  data.cpp  gnu_regex.h  ini.cpp  ini.h  int.cpp  lcw.cpp  mempool.h  mixfile.cpp  mmsys.h  mono.h  mpu.cpp  msgloop.cpp  mutex.cpp  mutex.h  point.h  random.cpp  random.h  rawfile.cpp  rawfile.h  rcfile.cpp  rcfile.h  rlerle.h  sha.cpp  sha.h  simplevec.h  systimer.h  (+11 more)
Code/wwnet/: CMakeLists.txt  connect.cpp  fromaddress.h  netutil.h  networkobjectmgr.cpp  packetmgr.cpp  packetmgr.h  rhost.h  socket_compat.h
Code/wwphys/: CMakeLists.txt  Path.cpp  Pathfind.cpp  PathfindSector.cpp  PathfindSectorBuilder.cpp  pathmgr.cpp  pathsolve.cpp  physdecalsys.cpp  pscene_projectors.cpp  visoptimizationcontext.cpp
Code/wwsaveload/: CMakeLists.txt  saveload.cpp
Code/wwtranslatedb/: CMakeLists.txt  translatedb.cpp
Code/wwui/: CMakeLists.txt  IMECandidateCtrl.h  IMEManager.h  ProgressCtrl.h  dialogbase.cpp  dialogmgr.cpp  dropdownctrl.cpp  listctrl.cpp  listiconmgr.cpp  mapctrl.cpp  menudialog.cpp  shortcutbarctrl.cpp  tabctrl.cpp  treectrl.cpp
Code/wwutil/: CMakeLists.txt  miscutil.cpp  stackdump.cpp
build-manifests/: vc6-projects.json  vc6-projects.md
cmake/: EAProject.cmake
docs/architecture/: 9-bucket-architecture-map.md  agentic-workflow.md  ai-bootstrap-prompt.md  ai-handoff-guide.md  artifact-parity.md  commando-dependency-prep.md  current-to-future-bucket-map.md  deferred-source-ledger.md  ea-baseline-contract.md  foundation-target-map.md  math-types-extraction-spec.md  modernization-progress-roadmap.md  modernization-strategy-v2.md  near-term-batch-roadmap.md  original-project-inventory.md  original-project-scaffold-status.md  platform-boundary-contracts.md  project-scaffold-status.md  renderer-seam-contract.md  stub-contracts.md  target-probe-report.md  upstream-baseline-selection.md  upstream-convergence-plan.md  w3dhub-port-evaluation.md
docs/parity/: target-status.md
scripts/architecture/: check_doc_sync.py
scripts/projects/: parse_vc6_workspace.py  write_cmake_scaffold.py  write_project_inventory.py
scripts/replay/: compare_openw3d_port.py
(+42 files in other folders)
