# Conservative scaffold for the original EA VC6 Commando application project.
#
# This target keeps the original project name and physical layout. The source
# groups below make product-shell, client/UI, runtime orchestration, FDS-mode,
# online-service, config-shell, and backend-ownership seams explicit before
# any real client/FDS product split or parity claim.

set(COMMANDO_PRODUCT_STARTUP_SOURCES
  ../../Run/_asserts.txt
  ../../Run/_except.txt
  ../../run/_logfile.txt
  ../../../RenegadeMe/Doc/cncwishlist.txt
  ../../../RenegadeMe/Doc/currentbugs.txt
  ../../../RenegadeMe/Doc/joinprocess.txt
  ./junkcode.txt
  ../../../RenegadeMe/Doc/priorities.txt
  ../../Run/results.txt
  ../../../RenegadeMe/Doc/todo.txt
  ./chat.rc
  ./Renegade.ico
)

set(COMMANDO_CLIENT_FRONTEND_UI_SOURCES
  ./overlay.cpp
  ./overlay.h
  ./scorescreen.cpp
  ./scorescreen.h
  ./textdisplay.cpp
  ./textdisplay.h
  ./multihud.cpp
  ./multihud.h
  ./dialogresource.h
  ./dialogtests.cpp
  ./dialogtests.h
  ./dlgcharacteroptions.cpp
  ./dlgcharacteroptions.h
  ./dlgcheatoptions.cpp
  ./dlgcheatoptions.h
  ./dlgcncbattleinfo.cpp
  ./dlgcncbattleinfo.h
  ./dlgcncpurchasemainmenu.cpp
  ./dlgcncpurchasemainmenu.h
  ./dlgcncpurchasemenu.cpp
  ./dlgcncpurchasemenu.h
  ./dlgcncreference.cpp
  ./dlgcncreference.h
  ./dlgcncserverinfo.cpp
  ./dlgcncserverinfo.h
  ./dlgcncteaminfo.cpp
  ./dlgcncteaminfo.h
  ./dlgcncwinscreen.cpp
  ./dlgcncwinscreen.h
  ./dlgconfigaudiotab.cpp
  ./dlgconfigaudiotab.h
  ./dlgconfigperformancetab.cpp
  ./dlgconfigperformancetab.h
  ./dlgconfigvideotab.cpp
  ./dlgconfigvideotab.h
  ./dlgcontrols.cpp
  ./dlgcontrols.h
  ./dlgcontrolsaveload.cpp
  ./dlgcontrolsaveload.h
  ./dlgcontrolslisttab.cpp
  ./dlgcontrolslisttab.h
  ./dlgcontroltabs.cpp
  ./dlgcontroltabs.h
  ./dlgcredits.cpp
  ./dlgcredits.h
  ./DlgDownload.cpp
  ./DlgDownload.h
  ./dlgevabuildingstab.cpp
  ./dlgevabuildingstab.h
  ./dlgevacharacterstab.cpp
  ./dlgevacharacterstab.h
  ./dlgevadatatab.cpp
  ./dlgevadatatab.h
  ./dlgevaencyclopedia.cpp
  ./dlgevaencyclopedia.h
  ./dlgevamaptab.cpp
  ./dlgevamaptab.h
  ./dlgevaobjectivestab.cpp
  ./dlgevaobjectivestab.h
  ./dlgevavehiclestab.cpp
  ./dlgevavehiclestab.h
  ./dlgevaviewertab.cpp
  ./dlgevaviewertab.h
  ./dlgevaweaponstab.cpp
  ./dlgevaweaponstab.h
  ./dlghelpscreen.cpp
  ./dlghelpscreen.h
  ./dlgloadspgame.cpp
  ./dlgloadspgame.h
  ./dlgmainmenu.cpp
  ./dlgmainmenu.h
  ./DlgMessageBox.cpp
  ./DlgMessageBox.h
  ./dlgmovieoptions.cpp
  ./dlgmovieoptions.h
  ./dlgmpchangelannickname.cpp
  ./dlgmpchangelannickname.h
  ./DlgMPConnect.cpp
  ./DlgMPConnect.h
  ./DlgMPConnectionRefused.cpp
  ./DlgMPConnectionRefused.h
  ./dlgmpingamechat.cpp
  ./dlgmpingamechat.h
  ./dlgmpingameteamchat.cpp
  ./dlgmpingameteamchat.h
  ./dlgmplangamelist.cpp
  ./dlgmplangamelist.h
  ./dlgmplanhostoptions.cpp
  ./dlgmplanhostoptions.h
  ./dlgmpslaveservers.cpp
  ./DlgMPTeamSelect.cpp
  ./DlgMPTeamSelect.h
  ./dlgmpwoladdbuddy.cpp
  ./dlgmpwoladdbuddy.h
  ./dlgmpwoladdignoreentry.cpp
  ./dlgmpwoladdignoreentry.h
  ./dlgmpwolautologinprompt.cpp
  ./dlgmpwolautologinprompt.h
  ./dlgmpwolbuddies.cpp
  ./dlgmpwolbuddies.h
  ./dlgmpwolbuddylistpopup.cpp
  ./dlgmpwolbuddylistpopup.h
  ./dlgmpwolchat.cpp
  ./dlgmpwolchat.h
  ./dlgmpwoldeletebuddy.cpp
  ./dlgmpwoldeletebuddy.h
  ./dlgmpwoldeleteignoreentry.cpp
  ./dlgmpwoldeleteignoreentry.h
  ./dlgmpwolgamelist.cpp
  ./dlgmpwolgamelist.h
  ./dlgmpwolgoodies.cpp
  ./dlgmpwolgoodies.h
  ./dlgmpwolignorelist.cpp
  ./dlgmpwolignorelist.h
  ./dlgmpwolinvitation.cpp
  ./dlgmpwolinvitation.h
  ./dlgmpwollocalenag.cpp
  ./dlgmpwollocalenag.h
  ./dlgmpwolmain.cpp
  ./dlgmpwolmain.h
  ./dlgmpwolmotd.cpp
  ./dlgmpwolmotd.h
  ./dlgmpwolpagebuddy.cpp
  ./dlgmpwolpagebuddy.h
  ./dlgmpwolpagereply.cpp
  ./dlgmpwolpagereply.h
  ./dlgmpwolquickmatchoptions.cpp
  ./dlgmpwolquickmatchoptions.h
  ./dlgmultiplayoptions.cpp
  ./dlgmultiplayoptions.h
  ./DlgPasswordPrompt.cpp
  ./DlgPasswordPrompt.h
  ./dlgpreviewoptions.cpp
  ./dlgpreviewoptions.h
  ./DlgQuickmatch.cpp
  ./DlgQuickmatch.h
  ./DlgRestart.cpp
  ./DlgRestart.h
  ./dlgsavegame.cpp
  ./dlgsavegame.h
  ./dlgserversaveload.cpp
  ./dlgserversaveload.h
  ./dlgsidebarhelp.cpp
  ./dlgsidebarhelp.h
  ./dlgtechoptions.cpp
  ./dlgtechoptions.h
  ./DlgWebPage.cpp
  ./DlgWebPage.h
  ./DlgWOLAutoStart.cpp
  ./DlgWOLAutoStart.h
  ./DlgWOLLogon.cpp
  ./DlgWOLLogon.h
  ./DlgWOLSettings.cpp
  ./DlgWOLSettings.h
  ./DlgWOLWait.cpp
  ./DlgWOLWait.h
  ./mainmenutransition.cpp
  ./mainmenutransition.h
  ./radiocommanddisplay.cpp
  ./radiocommanddisplay.h
  ./renegadedialogmgr.cpp
  ./renegadedialogmgr.h
)

set(COMMANDO_CLIENT_RUNTIME_ORCHESTRATION_SOURCES
  ./combatgmode.cpp
  ./combatgmode.h
  ./commandosaveload.cpp
  ./commandosaveload.h
  ./comnetrcvinst.cpp
  ./comnetrcvinst.h
  ./god.cpp
  ./god.h
  ./level.cpp
  ./level.h
  ./nethandler.cpp
  ./nethandler.h
  ./player.cpp
  ./player.h
  ./playermanager.cpp
  ./playermanager.h
  ./renegadeplayerterminal.cpp
  ./renegadeplayerterminal.h
  ./team.cpp
  ./team.h
  ./teammanager.cpp
  ./teammanager.h
  ./campaign.cpp
  ./campaign.h
  ./gamemenu.cpp
  ./gamemenu.h
  ./langmode.cpp
  ./langmode.h
  ./_globals.h
  ./afxres.h
  ./gamemode.cpp
  ./gamemode.h
  ./WINMAIN.CPP
  ./WINMAIN.H
  ./GameResSend.cpp
  ./GameResSend.h
  ./mpsettingsmgr.cpp
  ./mpsettingsmgr.h
  ./chatshre.cpp
  ./chatshre.h
  ./gamechanlist.cpp
  ./gamechanlist.h
  ./gamesideservercontrol.cpp
  ./gamesideservercontrol.h
  ./netinterface.cpp
  ./netinterface.h
  ./apppacketstats.cpp
  ./apppacketstats.h
  ./clienthintmanager.cpp
  ./clienthintmanager.h
  ./clientpingmanager.cpp
  ./clientpingmanager.h
  ./cnetwork.cpp
  ./cnetwork.h
  ./comnetrcv.h
  ./datasafe.cpp
  ./datasafe.h
  ./demosupport.h
  ./messages.cpp
  ./netgraphs.cpp
  ./nicenum.cpp
  ./nicenum.h
  ./pkthandlers.cpp
  ./vendor.cpp
  ./vendor.h
  ./gamedata.cpp
  ./gamedata.h
  ./gdcnc.cpp
  ./gdcnc.h
  ./gdsingleplayer.cpp
  ./gdsingleplayer.h
  ./gdskirmish.cpp
  ./gdskirmish.h
  ./resource.h
  ./skinpackage.cpp
  ./skinpackage.h
  ./skinpackagemgr.cpp
  ./skinpackagemgr.h
  ./AnnounceEvent.cpp
  ./AnnounceEvent.h
  ./bioevent.cpp
  ./bioevent.h
  ./changeteamevent.cpp
  ./changeteamevent.h
  ./cshint.cpp
  ./cshint.h
  ./cspingrequestevent.cpp
  ./cspingrequestevent.h
  ./cstextobj.cpp
  ./cstextobj.h
  ./evictionevent.cpp
  ./evictionevent.h
  ./gamedataupdateevent.cpp
  ./gamedataupdateevent.h
  ./gameoptionsevent.cpp
  ./gameoptionsevent.h
  ./godmodeevent.cpp
  ./godmodeevent.h
  ./moneyevent.cpp
  ./moneyevent.h
  ./netevent.cpp
  ./netevent.h
  ./playerkill.cpp
  ./playerkill.h
  ./purchaserequestevent.cpp
  ./purchaserequestevent.h
  ./purchaseresponseevent.cpp
  ./purchaseresponseevent.h
  ./requestkillevent.cpp
  ./requestkillevent.h
  ./scoreevent.cpp
  ./scoreevent.h
  ./scpingresponseevent.cpp
  ./scpingresponseevent.h
  ./sctextobj.cpp
  ./sctextobj.h
  ./suicideevent.cpp
  ./suicideevent.h
  ./vipmodeevent.cpp
  ./vipmodeevent.h
  ./warpevent.cpp
  ./warpevent.h
  ./winevent.cpp
  ./winevent.h
  ../WWOnline/GameResField.cpp
  ../WWOnline/GameResField.h
  ../WWOnline/GameResPacket.cpp
  ../WWOnline/GameResPacket.h
  ../WWOnline/PingProfile.cpp
  ../WWOnline/PingProfile.h
  ../WWOnline/RefCounted.h
  ../WWOnline/RefPtr.h
  ../WWOnline/WaitCondition.cpp
  ../WWOnline/WaitCondition.h
  ./renegadecheatmgr.cpp
  ./renegadecheatmgr.h
  ./floodprotectionmgr.cpp
  ./floodprotectionmgr.h
  ./modpackage.cpp
  ./modpackage.h
  ./modpackagemgr.cpp
  ./modpackagemgr.h
)

set(COMMANDO_FDS_MODE_SOURCES
  ./AutoStart.cpp
  ./AutoStart.h
  ./ConsoleMode.cpp
  ./ConsoleMode.h
  ./shutdown.cpp
  ./shutdown.h
  ./slavemaster.cpp
  ./slavemaster.h
  ./clientgoodbyeevent.cpp
  ./clientgoodbyeevent.h
  ./svrgoodbyeevent.cpp
  ./svrgoodbyeevent.h
  ./clientfps.cpp
  ./clientfps.h
  ./serverfps.cpp
  ./serverfps.h
)

set(COMMANDO_ONLINE_SERVICE_GLUE_SOURCES
  ./wolgmode.cpp
  ./wolgmode.h
  ./BandwidthCheck.cpp
  ./bandwidthcheck.h
  ./FirewallWait.cpp
  ./FirewallWait.h
  ./WOLBuddyMgr.cpp
  ./WOLBuddyMgr.h
  ./WOLChatMgr.cpp
  ./WOLChatMgr.h
  ./WOLDiags.cpp
  ./WOLDiags.h
  ./WOLGameInfo.cpp
  ./WOLGameInfo.h
  ./WOLJoinGame.cpp
  ./WOLJoinGame.h
  ./WOLLocaleMgr.cpp
  ./wollocalemgr.h
  ./WOLLoginProfile.cpp
  ./WOLLoginProfile.h
  ./WOLLogonMgr.cpp
  ./WOLLogonMgr.h
  ./WOLQuickMatch.cpp
  ./WOLQuickMatch.h
  ./gamechannel.cpp
  ./gamechannel.h
  ./bandwidth.cpp
  ./bandwidth.h
  ./bandwidthgraph.cpp
  ./bandwidthgraph.h
  ./NAT.cpp
  ./nataddr.cpp
  ./natsock.cpp
  ./natter.cpp
  ./sbbomanager.cpp
  ./sbbomanager.h
  ../wolapi/chatdefs.h
  ../wolapi/downloaddefs.h
  ../wolapi/ftpdefs.h
  ../wolapi/netutildefs.h
  ../wolapi/WOLAPI.h
  ../wolapi/WOLAPI_i.c
  ./lanchat.cpp
  ./lanchat.h
  ./clientbboevent.cpp
  ./clientbboevent.h
  ./donateevent.cpp
  ./donateevent.h
  ./gamespycschallengeresponseevent.cpp
  ./gamespycschallengeresponseevent.h
  ./gamespyscchallengeevent.cpp
  ./gamespyscchallengeevent.h
  ../WOLBrowser/WOLBrowser.h
  ../WOLBrowser/WOLBrowser_i.c
  ../WWOnline/WOLAgeCheck.h
  ../WWOnline/WOLChannel.cpp
  ../WWOnline/WOLChannel.h
  ../WWOnline/WOLChatMsg.cpp
  ../WWOnline/WOLChatMsg.h
  ../WWOnline/WOLChatObserver.cpp
  ../WWOnline/WOLChatObserver.h
  ../WWOnline/WOLConnect.cpp
  ../WWOnline/WOLConnect.h
  ../WWOnline/WOLDownload.cpp
  ../WWOnline/WOLDownload.h
  ../WWOnline/WOLErrorUtil.cpp
  ../WWOnline/WOLErrorUtil.h
  ../WWOnline/WOLGame.cpp
  ../WWOnline/WOLGame.h
  ../WWOnline/WOLGameOptions.cpp
  ../WWOnline/WOLGameOptions.h
  ../WWOnline/WOLLadder.cpp
  ../WWOnline/WOLLadder.h
  ../WWOnline/WOLLangCodes.h
  ../WWOnline/WOLLoginInfo.cpp
  ../WWOnline/WOLLoginInfo.h
  ../WWOnline/WOLNetUtilObserver.cpp
  ../WWOnline/WOLNetUtilObserver.h
  ../WWOnline/WOLPageMsg.cpp
  ../WWOnline/WOLPageMsg.h
  ../WWOnline/WOLPing.h
  ../WWOnline/WOLProduct.cpp
  ../WWOnline/WOLProduct.h
  ../WWOnline/WOLServer.cpp
  ../WWOnline/WOLServer.h
  ../WWOnline/WOLSession.cpp
  ../WWOnline/WOLSession.h
  ../WWOnline/WOLSquad.cpp
  ../WWOnline/WOLSquad.h
  ../WWOnline/WOLString.cpp
  ../WWOnline/WOLString.h
  ../WWOnline/WOLUser.cpp
  ../WWOnline/WOLUser.h
  ./CDKeyAuth.cpp
  ./CDKeyAuth.h
  ./GameSpy_QnR.cpp
  ./GameSpy_QnR.h
  ./gamespyadmin.cpp
  ./gamespyadmin.h
  ./gamespyauthmgr.cpp
  ./gamespyauthmgr.h
  ./GameSpyBanList.cpp
  ./GameSpyBanList.h
)

set(COMMANDO_CONFIG_SHELL_SOURCES
  ./inputconfig.cpp
  ./inputconfig.h
  ./inputconfigmgr.cpp
  ./inputconfigmgr.h
  ./regbool.cpp
  ./regbool.h
  ./regfloat.cpp
  ./regfloat.h
  ./regint.cpp
  ./regint.h
  ./regstring.cpp
  ./regstring.h
  ./systemsettings.cpp
  ./systemsettings.h
  ./console.cpp
  ./console.h
  ./consolefunction.cpp
  ./consolefunction.h
  ./singletoninstancekeeper.cpp
  ./singletoninstancekeeper.h
  ./ServerSettings.cpp
  ./ServerSettings.h
  ./devoptions.cpp
  ./devoptions.h
  ./diagnostics.cpp
  ./diagnostics.h
  ./priority.cpp
  ./priority.h
  ./useroptions.cpp
  ./useroptions.h
  ./consolecommandevent.cpp
  ./consolecommandevent.h
  ./csconsolecommandevent.cpp
  ./csconsolecommandevent.h
)

set(COMMANDO_RENDER_AUDIO_OWNERSHIP_SOURCES
  ./gameinitmgr.cpp
  ./gameinitmgr.h
  ./movie.cpp
  ./movie.h
  ./buildnum.cpp
  ./buildnum.h
  ./cdverify.cpp
  ./cdverify.h
  ./cominit.cpp
  ./cominit.h
  ./init.cpp
  ./init.h
  ./mainloop.cpp
  ./mainloop.h
  ./WebBrowser.cpp
  ./WebBrowser.h
  ./loadingevent.cpp
  ./loadingevent.h
)

set(COMMANDO_LOCAL_SUPPORT_SOURCES
  ./boolean.h
  ./commandochunkids.h
  ./commandoids.h
  ./lev_file.h
)

set(COMMANDO_ALL_SOURCES
  ${COMMANDO_PRODUCT_STARTUP_SOURCES}
  ${COMMANDO_CLIENT_FRONTEND_UI_SOURCES}
  ${COMMANDO_CLIENT_RUNTIME_ORCHESTRATION_SOURCES}
  ${COMMANDO_FDS_MODE_SOURCES}
  ${COMMANDO_ONLINE_SERVICE_GLUE_SOURCES}
  ${COMMANDO_CONFIG_SHELL_SOURCES}
  ${COMMANDO_RENDER_AUDIO_OWNERSHIP_SOURCES}
  ${COMMANDO_LOCAL_SUPPORT_SOURCES}
)

set(COMMANDO_BUILD_SOURCES
  ${COMMANDO_ALL_SOURCES}
)

if(NOT WIN32)
  # Commando is the historical product shell. Keep the full inventory visible,
  # but defer explicit UI/frontend, FDS-mode, online-service, and render/audio
  # ownership islands so the first non-Windows probe can stop at meaningful
  # product-shell/runtime blocker surfaces instead of immediately drowning in
  # known WOL/GameSpy/UI/DirectX/Miles/Bink dependencies.
  list(REMOVE_ITEM COMMANDO_BUILD_SOURCES
    ${COMMANDO_PRODUCT_STARTUP_SOURCES}
    ${COMMANDO_CLIENT_FRONTEND_UI_SOURCES}
    ${COMMANDO_FDS_MODE_SOURCES}
    ${COMMANDO_ONLINE_SERVICE_GLUE_SOURCES}
    ${COMMANDO_RENDER_AUDIO_OWNERSHIP_SOURCES}
  )
endif()

ea_normalize_legacy_paths(commando_sources_normalized ${COMMANDO_BUILD_SOURCES})
ea_filter_existing_sources(commando commando_sources_existing ${commando_sources_normalized})

add_executable(commando ${commando_sources_existing})

target_include_directories(commando PRIVATE
  ${CMAKE_CURRENT_SOURCE_DIR}
  ../wol
  ../network
  ../wwsound
  ../shell
  ../modes
  ../lan
  ../DirectX/include
  ../
  ../wwui
  ../wwbitpack
  ../Combat
  ../WWAudio
  ../miles6/include
  ../wolapi
  ../wwutil
  ../wwlzhl
  ../wwnet
  ../WWMath
  ../ww3d2
  ../wwphys
  ../wwlib
  ../wwdebug
  ../wwsaveload
  ../wwtranslatedb
  ../BinkMovie
  ../SControl
  ../GameSpy
)

target_compile_definitions(commando PRIVATE
  NDEBUG
  WINVER=0x400
  _WINDOWS
  DIRECTX
  WIN32
)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  target_compile_options(commando PRIVATE -fpermissive)
endif()

set_target_properties(commando PROPERTIES
  OUTPUT_NAME commando
)
